fixed about.html page overflow issue

--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,7 @@ Base styles
 html {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
-  overflow-x: hidden;
+
 }
 
 *,
@@ -805,7 +805,6 @@ About Page
 }
 
 .stats .row h2 {
-  /* margin-top: 60px; */
   font-size: 2em;
   padding: 0;
 }
